Add Order func
