# Space/venus/internal/gin/api/controller/get_order_by_id.go
@@ -11,41 +11,42 @@ import (
 	"github.com/sirupsen/logrus"
 )
 
-// @Summary Get photo ID
-// @Tags Photo
-// @Description get photo ID by ID
+// @Summary Get order ID
+// @Tags Order
+// @Description get order ID by ID
 // @Accept  json
 // @Produce  json
-// @Param photoId query uint true "place here photo ID"
-// @Success 200 {object} domain.GetPhotoByIdResponse
-// @Router /admin/photo [get]
-func GetPhotoById(c *gin.Context, dbc db_services.DbController) {
-	var req domain.GetPhotoByIdRequest
+// @Param orderId query uint true "place here order ID"
+// @Success 200 {object} domain.GetOrderByIdResponse
+// @Router /admin/order [get]
+func GetOrderById(c *gin.Context, dbc db_services.DbController) {
+	var req domain.GetOrderByIdRequest
 	if err := c.ShouldBindQuery(&req); err != nil {
 		logrus.WithError(err).Error("couldn't bind request data")
 		c.JSON(500, fmt.Sprintf("Error on binding request. err: %v", err))
 		return
 	}
-	logrus.WithField("photoId", req.PhotoId).Info("Start 'GetPhotoById' API method")
-	if err := checkGetPhotoByIdRequestBody(req); err != nil {
+	logrus.WithField("orderId", req.OrderId).Info("Start 'GetOrderById' API method")
+	if err := checkGetOrderByIdRequestBody(req); err != nil {
 		logrus.WithError(err).Error("couldn't bind request data")
 		c.JSON(400, fmt.Sprintf("Error on binding request. err: %v", err))
 		return
 	}
 
-	resp, err := service.GetPhotoById(req.PhotoId, dbc)
+	resp, err := service.GetOrderById(req.OrderId, dbc)
 	if err != nil {
-		logrus.WithError(err).Error("couldn't get photo from DB")
+		logrus.WithError(err).Error("couldn't get order from DB")
 		c.JSON(500, fmt.Sprintf("Error on getting data from DB. err: %v", err))
 		return
 	}
 	logrus.WithField("response", resp).Debug("Data from DB")
+
 	c.JSON(200, resp)
 }
 
-func checkGetPhotoByIdRequestBody(req domain.GetPhotoByIdRequest) error {
-	if req.PhotoId <= 0 {
-		return errors.New("photoId must be above 0")
+func checkGetOrderByIdRequestBody(req domain.GetOrderByIdRequest) error {
+	if req.OrderId <= 0 {
+		return errors.New("orderId must be above 0")
 	}
 
 	return nil
